# python-trading

./: .gitignore  .pytestignore  README.md  install_requirements.sh  investing.py  test.txt  xtb_connect.py
Candechart/: candle.py
Logger/: logger.py  (+1 more)
Trading/basket/: .gitignore  .~lock.trade_summary.csv#  README.md  composition_root.py  config.yaml  default.rules  main.py  pyproject.toml  structure.txt  trade_summary.csv
Trading/basket/model/: config_loader.py  config_model.py  model.py
Trading/basket/src/mrscore/app/: composition_root.py  universe_runner.py
Trading/basket/src/mrscore/backtest/: __init__.py  backtester.py  types.py
Trading/basket/src/mrscore/cli/: main.py  main_2.py
Trading/basket/src/mrscore/components/deviation/: zscore.py
Trading/basket/src/mrscore/components/failure/: composite.py
Trading/basket/src/mrscore/components/mean/: __init__.py  ema.py  kalman_mean.py  rolling_sma.py
Trading/basket/src/mrscore/config/: __init__.py  loader.py  models.py
Trading/basket/src/mrscore/core/: diagnostics.py  engine.py  ranking.py  ratio_universe.py  results.py  scoring.py  types.py
Trading/basket/src/mrscore/io/: adapters.py  cache.py  history.py  loaders.py  ratio.py  yfinance_loader.py
Trading/basket/src/mrscore/utils/: errors.py  logging.py
Trading/basket/src/mrscore/viz/: __init__.py  ratios.py
Trading/basket/tests/: test_aligned_panel.py  test_cache.py  test_ema.py  test_engine_synthetic.py  test_ewma_vol.py  test_history.py  test_rolling_sma.py  test_rolling_std.py  test_scoring.py  test_yfinance_live.py  test_yfinance_loader.py
(+929 files in other folders)
